feat: implement JSON-based 403 access denied handling and robust token-based logout with enhanced CORS and error management.